# python-logger

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README.md
docs/api/: loggable_mixin.md  loglevel.md  loguru_logger.md
src/logger/: __init__.py  contract.py  errors.py  loggable_mixin.py  loglevel.py  loguru.py
tests/: conftest.py
tests/logger/: loggable_mixin_test.py  loglevel_test.py  loguru_test.py
