[project]
name = "logger"
version = "0.3.2"
description = "Python logger"
authors = [
  { name = "Inokufu", email = "contact@inokufu.com" }
]
readme = "docs/README.md"
requires-python = ">= 3.13"

dependencies = [
    "loguru>=0.7.3,<0.7.4",
]

[tool.uv]
add-bounds = "minor"
package = true

[dependency-groups]
dev = [
    "diff-cover>=10.2.0,<10.3.0",
    "griffe-inherited-docstrings>=1.1.3,<1.2.0",
    "mkdocs>=1.6.1,<1.7.0",
    "mkdocs-material>=9.7.6,<9.8.0",
    "mkdocstrings-python>=2.0.3,<2.1.0",
    "pre-commit>=4.5.1,<4.6.0",
    "pytest>=9.0.2,<9.1.0",
    "pytest-cov>=7.1.0,<7.2.0",
    "pytest-mock>=3.15.1,<3.16.0",
    "ruff>=0.15.8,<0.15.9",
    "ty>=0.0.26,<0.0.27",
]

[tool.ruff]
output-format = "concise"
target-version = "py313"
line-length = 88
indent-width = 4

lint.pydocstyle.convention = "google"
lint.flake8-bandit.check-typed-exception = true
lint.flake8-type-checking.strict = true

lint.select = ["ALL"]
lint.ignore = [
  "PLE1205", # logging-too-many-args
  "D100", # pydocstyle
  "EM", # flake8-errmsg
  "INP001", # implicit-namespace-package
  "TRY003", # raise-vanilla-args
  "TRY401", # verbose-log-message
  "TC", # type-checking blocks
]
lint.extend-unfixable = [
  "TC002", # typing-only-third-party-import
  "TRY400", # error-instead-of-exception
  "SIM105", # suppressible-exception
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/*" = [
    "S101", # Asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = ["--cov=src", "--cov-report=term", "--cov-report=xml"]

[tool.coverage.report]
exclude_also = [
  "@(abc\\.)?abstractmethod",
]
